feat: relatorio de produtos com estoque baixo, meio e alto
