# routes/relatorioRoute.js
@@ -7,5 +7,14 @@ let ctrl = new RelatorioController();
 router.get('/relatorio/:inicio/:fim', (req,res) => {
     ctrl.RelatorioPeriodo(req,res);
 })
+router.get('/relatorio/estoque-baixo', (req,res) => {
+    ctrl.RelatorioProdutoEstoqueBaixo(req,res);
+})
+router.get('/relatorio/estoque-medio', (req,res) => {
+    ctrl.RelatorioProdutoEstoqueMedio(req,res);
+})
+router.get('/relatorio/estoque-alto', (req,res) => {
+    ctrl.RelatorioProdutoEstoqueAlto(req,res);
+})
 
 export default router
